deploy/kubernetes/manifests/29-ingress-front-end.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sock-shop
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shop.sock-shop.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port:
              number: 80
